<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">AsChat</string>
    <string name="register">Registration</string>
    <string name="input_nickname">Input your nickname</string>
    <string name="name_title">Nick Name</string>
    <string name="name_date">Date of Birth</string>
    <string name="default_birthday">1995-01-01</string>
    <string name="country_title">Country</string>
    <string name="invitation_title">Invitation Code</string>
    <string name="optional">Optional</string>
    <string name="man">Man </string>
    <string name="woman">Woman </string>
    <string name="gender_title">Gender</string>
    <string name="fast_login">Fast Login</string>
    <string name="skip">skip</string>
    <string name="host_wall">Host Wall</string>
    <string name="messages">Messages</string>
    <string name="mine">Mine</string>
    <string name="argree"><![CDATA[By using our App you agree with our <font color="#972FFF">Terms & Conditions</font> and <font color="#972FFF">Privacy Policy</font>]]></string>
    <string name="coin">MyCoins</string>
    <string name="custom_services">Customer Service</string>
    <string name="block_list">Blocked List</string>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="type_here">Type here ...</string>
    <string name="submit">Submit</string>
    <string name="select_country">Select a country</string>
    <string name="footer_pulling">Pull up to load more</string>
    <string name="footer_release">6/5000  Release now load</string>
    <string name="footer_refreshing">Is refreshing</string>
    <string name="footer_loading">Loading...</string>
    <string name="footer_finish">loaded</string>
    <string name="footer_failed">Load failed</string>
    <string name="footer_nothing">There\'s no more data</string>
    <string name="video_call">video call</string>
    <string name="shielding_report">Shielding report</string>
    <string name="video">Video</string>
    <string name="impression">Impression</string>
    <string name="calls">Calls</string>
    <string name="Followed">Followed</string>
    <string name="unfollow_success">Unfollow successfully</string>
    <string name="follow_success">Follow successfully</string>
    <string name="gift">Gift</string>
    <string name="coin_store">Coin Store</string>
    <string name="blocked_title">Blocked List</string>
    <string name="Follow">Follow</string>
    <string name="Block">Block</string>
    <string name="Report">Report</string>
    <string name="Cancel">Cancel</string>
    <string name="Porngraphic">Porngraphic</string>
    <string name="Falsegender">False gender</string>
    <string name="Fraud">Fraud</string>
    <string name="unfollow">Unfollow</string>
    <string name="unBlock">Unblock</string>
    <string name="Unblock_successfully">Unblock successfully</string>
    <string name="Block_successfully">Block successfully</string>
    <string name="Report_successfully">Report successfully</string>
    <string name="Setting">Setting</string>
    <string name="copy">copy</string>
    <string name="autotrans">Auto Translate</string>
    <string name="copy_success">Copy Successfully</string>
    <string name="Save_information_successfully">Save information successfully</string>
    <string name="Failed_to_save_information">Failed to save information</string>
    <string name="Save_avatar_successfully">Save the avatar successfully</string>
    <string name="Failed_to_save_avatar">Failed to save avatar</string>
    <string name="charm">Charm</string>
    <string name="rich">Rich</string>
    <string name="abnormal_network">Abnormal network status</string>
    <string name="okay">okay</string>
    <string name="TermsConditions"><![CDATA[Terms & Conditions]]></string>
    <string name="PrivcayPolicy">Privcay Policy</string>
    <string name="RateUs">Rate Us</string>
    <string name="is_typing">Typing</string>
    <string name="is_speaking">Speaking</string>
    <string name="rc_mention_messages">\@ %s</string>
    <string name="translate_this">Click to translate</string>
    <string name="recharge_successfully">recharge successfully</string>
    <string name="Failed_to_recharge">recharge failed</string>
    <string name="doyoulike">"Do you like "</string>
    <string name="rechargecallback">Recharge to call back!</string>
</resources>