<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_report_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/dialog_block_second_Porngraphic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/Porngraphic"
            android:textColor="@color/tab_black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.3"
            android:background="@color/black_3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_block_second_Falsegenderblock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/Falsegender"
            android:textColor="@color/tab_black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.3"
            android:background="@color/black_3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_block_second_Fraud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/Fraud"
            android:textColor="@color/tab_black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.3"
            android:background="@color/black_3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_block_second_Block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_block_second_Block_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/Block"
            android:textColor="@color/tab_black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.3"
            android:background="@color/black_3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_block_second_Report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/Report"
            android:textColor="@color/tab_black"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:alpha="0.3"
        android:background="@color/dialog_gray" />

    <LinearLayout
        android:id="@+id/dialog_block_second_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/Cancel"
            android:textColor="@color/black_3"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>