<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_report_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/dialog_block_first_follow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_block_first_follow_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/Follow"
            android:textColor="@color/tab_black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.3"
            android:background="@color/black_3" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_block_first_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_block_first_block_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/Block"
            android:textColor="@color/tab_black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.3"
            android:background="@color/black_3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_block_first_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/Report"
            android:textColor="@color/tab_black"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:alpha="0.3"
        android:background="@color/dialog_gray" />

    <LinearLayout
        android:id="@+id/dialog_block_first_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/Cancel"
            android:textColor="@color/black_3"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>