<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

   <data>

   </data>

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

      <View
          android:id="@+id/view"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:background="@drawable/shape_tapbar"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <ImageView
          android:layout_width="77dp"
          android:layout_height="77dp"
          android:src="@mipmap/logo_154"
          android:id="@+id/fastlogin_logo"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@id/view"
          android:layout_marginTop="137dp" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintStart_toStartOf="@id/fastlogin_logo"
          app:layout_constraintEnd_toEndOf="@id/fastlogin_logo"
          app:layout_constraintTop_toBottomOf="@id/fastlogin_logo"
          android:layout_marginTop="15dp"
          android:textColor="@color/purple"
          android:textSize="20sp"
          android:text="@string/app_name"
          android:id="@+id/fastlogin_name" />

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/fastlogin_commit"
          android:layout_width="236dp"
          android:layout_height="48dp"
          android:text="@string/fast_login"
          android:textColor="@color/white"
          android:textSize="18sp"
          android:layout_marginTop="155dp"
          android:background="@drawable/shape_button_red_purple"
          app:layout_constraintStart_toStartOf="@id/fastlogin_name"
          app:layout_constraintEnd_toEndOf="@id/fastlogin_name"
          app:layout_constraintTop_toBottomOf="@id/fastlogin_name" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/argree"
          android:id="@+id/fastlogin_agree"
          android:gravity="center"
          app:layout_constraintStart_toStartOf="@id/fastlogin_commit"
          app:layout_constraintEnd_toEndOf="@id/fastlogin_commit"
          app:layout_constraintTop_toBottomOf="@id/fastlogin_commit"
          android:layout_marginTop="60dp"/>

   </androidx.constraintlayout.widget.ConstraintLayout>
</layout>